# chrome-for-testing

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md
src/: chromedriver.rs  error.rs  lib.rs
src/api/: channel.rs  known_good_versions.rs  last_known_good_versions.rs  mod.rs  platform.rs  version.rs
test-data/: info.md  known_good_versions_test_response.json  known_good_versions_with_downloads_test_response.json  last_known_good_versions_test_response.json  last_known_good_versions_with_downloads_test_response.json
tests/: integration.rs
