[package]
name = "chrome-for-testing"
version = "0.4.0"
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/lpotthast/chrome-for-testing"
description = """
Interact with the chrome-for-testing JSON API.
"""
categories = ["web-programming", "development-tools::testing"]
keywords = ["chrome", "chromedriver", "chromium", "selenium", "browser-testing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
exclude = [
    ".github/",
    ".idea/",
    ".vscode/",
    ".claude/",
    "AGENTS.md",
    "CLAUDE.md",
    "Justfile",
]

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
rootcause = "0.12.1"
serde = { version = "1.0.220", features = ["derive"] }
thiserror = "2.0.5"
time = { version = "0.3.47", features = ["serde", "parsing", "formatting"] }
url = "2.4.0"

[dev-dependencies]
assertr = "0.5.0"
mockito = "1.7.2"
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
